# libopusrx

./: .gitignore  Makefile  README.md  meson.build  meson.options
android_demo/: build.gradle.kts  settings.gradle.kts
android_demo/app/: build.gradle.kts
android_demo/app/src/main/: AndroidManifest.xml
android_demo/app/src/main/java/com/example/opusrx/: MainActivity.kt
android_demo/app/src/main/res/values/: strings.xml  themes.xml
android_demo/receiver/: build.gradle.kts
android_demo/web/: build.gradle.kts
jni/: meson.build  opusrx_jni.c
native_demo/: main.c  meson.build
src/: jb.c  jb.h  meson.build  opusrx.c  opusrx.h  pipeline.c  pipeline.h  player.h  primitives.c  rtp.c  rtp.h
src/opusrx/: opusrx.h  primitives.h
